src/test/ui/no-args-non-move-async-closure.stderr
error[E0708]: `async` non-`move` closures with arguments are not currently supported
  --> $DIR/no-args-non-move-async-closure.rs:6:13
   |
LL |     let _ = async |x: u8| {};
   |             ^^^^^^^^^^^^^
   |
   = help: consider using `let` statements to manually capture variables by reference before entering an `async move` closure

error: aborting due to previous error

